<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout_stopwatch"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.workouttracking.settracker.stopwatch.StopwatchFragment">

    <RelativeLayout
        android:id="@+id/stopwatch_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="48dp"
        android:layout_marginVertical="24dp"
        app:layout_constraintBottom_toTopOf="@id/button_toggle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <TextView
            android:id="@+id/text_view_stopwatch_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="00:00:00"
            android:textSize="36sp"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/image_view_reset"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_view_stopwatch_value"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/string_reset_stopwatch"
            android:src="@drawable/ic_baseline_refresh_24"
            app:tint="@color/iconColor" />

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_toggle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="36dp"
        android:contentDescription="@string/string_toggle_stopwatch"
        android:elevation="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        app:icon="@drawable/ic_baseline_play_arrow_24"
        app:iconGravity="end"
        app:iconPadding="0dp"
        app:iconSize="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_layout" />


</androidx.constraintlayout.widget.ConstraintLayout>